Fixed spacing on modal buttons

--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -423,10 +423,13 @@
   right: 0;
   margin: auto;
   gap: 10px;
-  max-width: 200px;
+  max-width: 300px;
 }
 @media(min-width: 576px) {
   .modal {
     height: 800px;
+  }
+  .modal-buttons {
+    flex-direction: row;
   }
 }
